# course-ds-base

./: .env-template  .gitignore  README.md  dvc.yaml  myfile.txt.dvc  newfile.txt  params.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.dvc/: config
dvc_plots/: index.html
notebooks/: lineapy-trial-prototype.ipynb  step-0-prototype.ipynb  step-1-prototype.ipynb  step-2-create-config-file.ipynb  step-3-reusable-code.ipynb  step-4-build-ml-pipeline.ipynb
src/dumbo/report/: visualization.py
src/dumbo/stages/: data_load.py  data_split.py  evaluate.py  featurize.py  train.py
src/stages/: data_load.py  data_split.py  evaluate.py  featurize.py  train.py
src/train/: train.py
src/utils/: logs.py
