[build-system]
requires = [
    "setuptools>=30.0.3",
    "setuptools-scm",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "dumbo"
version = "0.0.1"
description = "A small dvc example package"
authors = [
  { name = "Example Author", email = "author@example.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[project.urls]
"Homepage" = "https://github.com/mxli417/course-ds-base"